# LDO-API

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.MD  delete_or_archive_LDO_bulk.ipynb  download_LDO_bulk.ipynb  download_LDO_bulk.py  download_LDO_custom.ipynb  download_LDO_custom.py  download_LDO_ssm_tiffs.ipynb  download_LDO_ssm_tiffs.py  download_LDO_tiffs.py  example.env  export_LDO.py  export_SSM_metadata_uit_LDO_met_API.ipynb  export_SSM_metadata_uit_LDO_met_API.py  filter_scenarios.ipynb  liwo_download_LDO_custom_all.py  pixi.toml  pyproject.toml  update_local_LDO_custom.py  update_local_bulk_LDO.ipynb  update_local_bulk_LDO.py
LDO_API/: __init__.py  export_LDO.py  update_local_LDO_custom.py  update_local_bulk_LDO.py
legacy_scripts/: README.MD  delete_or_archive_LDO_bulk.ipynb  download_LDO_bulk.ipynb  download_LDO_bulk.py  download_LDO_ssm_tiffs.ipynb  download_LDO_ssm_tiffs.py  download_subset_metadata.py  filter_scenarios.ipynb  update_local_bulk_LDO.ipynb  update_local_bulk_LDO.py
utils/: analyse_current_files.py  analyse_size_scenarios.py  copy_ids.py  copy_subset_scenarios.py  copy_subset_secenarios.py  delete_unwanted_files_scenarios.py
