[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "LDO_API/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["LDO_API"]

[project]
name = "LDO_API"
version = "1.0.0"
description = "Scripts voor uitlezen van LDO API"
readme = "README.md"
license = {text = "GNU-GPL V3"}
authors = [
  { name = "David Haasnoot"},
]

dependencies = ["python-dotenv"]

[project.urls]
Source = "https://github.com/HKV-products-services/LDO-API"
